--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,18 @@
 
 <body>
     <main>
-        <header>
+        <header class="flex">
             <div class="headers">Today's To Do</div>
             <div>
                 <a href="#"></a><i class="fas fa-sync"></i></div>
         </header>
-        <form>
+        <form class="flex">
             <input type="text" class="todo-input" placeholder="Add to your list..." />
             <button class="todo-button" type="submit">
           <i class="fas fa-level-down-alt"> </i>
         </button>
         </form>
-        <div class="todo-container">
+        <div class="todo-container flex">
             <ul class="todo-list"></ul>
         </div>
         <div class="footer"><a href="#"> Clear all completed</a></div>
